--- a/tests/test.html
+++ b/tests/test.html
@@ -1,33 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Testing DataTier JS framework...</title>
+	<title>Testing ObjectObserver (JS) utility</title>
 </head>
 <body style='font:20px Tahoma'>
 
-	<div id="test" data-some.broken-thing.inproperty="anything"></div>
-
-	<!--TMP-->
-	<script src="../src/data-observer.js"></script>
-	<script src="../src/view-observer.js"></script>
-	<!--TMP-->
-
-	<script src="../src/data-tier.js"></script>
-
+	<script src="../src/object-observer.js"></script>
 
 	<script src="https://rawgit.com/gullerya/just-test-js/master/src/just-test.js"></script>
 
-	<script src="testDataObserver-OO.js"></script>
-	<script src="testDataObserver-Proxy.js"></script>
-	<script src="testFlattenObject.js"></script>
 	<script src="testLoadInit.js"></script>
 	<script src="testAPIs.js"></script>
-	<script src="testModel.js"></script>
-	<script src="testViews.js"></script>
-	<script src="testRules.js"></script>
-	<script src="testArraysSimple.js"></script>
-	<script src="testArraysRepeater.js"></script>
-	<script src="testCustomElements.js"></script>
-	<script src="testCustomViewToDataProcessor.js"></script>
+	<script src="testObjectObserver.js"></script>
+	<script src="testFlattenObject.js"></script>
 </body>
 </html>
