redesigned an internal implementation change API a bit started implementation of arrays support

--- a/tests/test.html
+++ b/tests/test.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Testing ObjectObserver (JS) utility</title>
+    <title>Testing ObjectObserver (JS) utility</title>
 </head>
 <body style='font:20px Tahoma'>
 
-	<script src="../src/object-observer.js"></script>
+    <script src="../src/object-observer.js"></script>
+    <script src="../src/utils.js"></script>
 
-	<script src="https://rawgit.com/gullerya/just-test-js/master/src/just-test.js"></script>
+    <script src="https://rawgit.com/gullerya/just-test-js/master/src/just-test.js"></script>
 
-	<script src="testLoadInit.js"></script>
-	<script src="testAPIs.js"></script>
-	<script src="testObjectObserver.js"></script>
-	<script src="testObjectObserverPerformance.js"></script>
+    <script src="testLoadInit.js"></script>
+    <script src="testAPIs.js"></script>
+    <script src="testObjectObserver.js"></script>
+    <script src="testObjectObserverPerformance.js"></script>
 
-	<script src="testFlattenObject.js"></script>
+    <script src="testFlattenObject.js"></script>
 </body>
 </html>
