--- a/tests/test.html
+++ b/tests/test.html
@@ -12,7 +12,8 @@
 
     <script src="testLoadInit.js"></script>
     <script src="testAPIs.js"></script>
-    <script src="testObjectObserver.js"></script>
+    <script src="testObjectObserver-objects.js"></script>
+    <script src="testObjectObserver-arrays.js"></script>
     <script src="testObjectObserverPerformance.js"></script>
 
     <script src="testFlattenObject.js"></script>
