added local test framework file, readme adjustements, preparation for bulk support operation support

--- a/tests/test.html
+++ b/tests/test.html
@@ -8,7 +8,7 @@
     <script src="../src/object-observer.js"></script>
     <script src="../src/utils.js"></script>
 
-    <script src="https://rawgit.com/gullerya/just-test-js/master/src/just-test.js"></script>
+    <script src="just-test.js"></script>
 
     <script src="testLoadInit.js"></script>
     <script src="testAPIs.js"></script>
