moving tests to run against dist content

--- a/tests/test.html
+++ b/tests/test.html
@@ -5,7 +5,7 @@
 </head>
 <body style='font:20px Tahoma'>
 
-    <script src="../src/object-observer.js"></script>
+    <script src="../dist/object-observer.js"></script>
     <script src="../src/utils.js"></script>
 
     <script src="just-test.js"></script>
