--- a/tests/test.html
+++ b/tests/test.html
@@ -10,12 +10,13 @@
 
     <script src="just-test.js"></script>
 
-    <script src="testLoadInit.js"></script>
-    <script src="testAPIs.js"></script>
-    <script src="testObjectObserver-objects.js"></script>
-    <script src="testObjectObserver-arrays.js"></script>
-    <script src="testObjectObserverPerformance.js"></script>
+    <script src="test-load-init.js"></script>
+    <script src="test-apis.js"></script>
+    <script src="test-object-observer-objects.js"></script>
+    <script src="test-object-observer-arrays.js"></script>
+    <script src="test-object-observer-performance.js"></script>
+    <script src="test-unobserve.js"></script>
 
-    <script src="testFlattenObject.js"></script>
+    <script src="test-flatten-object.js"></script>
 </body>
 </html>
