support for better subgraph handling + tests

--- a/tests/test.html
+++ b/tests/test.html
@@ -13,6 +13,7 @@
     <script src="test-load-init.js"></script>
     <script src="test-apis.js"></script>
     <script src="test-object-observer-objects.js"></script>
+    <script src="test-object-observer-subgraphs.js"></script>
     <script src="test-object-observer-arrays.js"></script>
     <script src="test-object-observer-performance.js"></script>
     <script src="test-unobserve.js"></script>
