fixing tests and adding eslint

--- a/tests/test.html
+++ b/tests/test.html
@@ -3,10 +3,10 @@
 <head>
     <title>Testing ObjectObserver (JS) utility</title>
 </head>
-<body style='font:20px Tahoma'>
+<body>
 
     <script src="../dist/object-observer.js"></script>
-    <script src="../src/utils.js"></script>
+
 
     <script src="just-test.js"></script>
 
@@ -17,7 +17,5 @@
     <script src="test-object-observer-arrays.js"></script>
     <script src="test-object-observer-performance.js"></script>
     <script src="test-unobserve.js"></script>
-
-    <script src="test-flatten-object.js"></script>
 </body>
 </html>
