tech: improving the DOCs

--- a/tests/test.html
+++ b/tests/test.html
@@ -17,5 +17,6 @@
         <script src="test-object-observer-arrays.js"></script>
         <script src="test-object-observer-performance.js"></script>
         <script src="test-unobserve.js"></script>
+        <script src="test-host-objects.js"></script>
     </body>
 </html>
