tech: improving the packaging / building layout

--- a/tests/test.html
+++ b/tests/test.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Testing ObjectObserver (JS) utility</title>
+        <title>Testing ObjectObserver (JS) library</title>
     </head>
     <body>
-
         <script src="../dist/object-observer.js"></script>
 
-        <script src="just-test.js"></script>
+        <script src="../build/node_modules/just-test/just-test.js"></script>
 
         <script src="test-load-init.js"></script>
         <script src="test-apis.js"></script>
