tech: improving the packaging / building layout

--- a/tests/test.html
+++ b/tests/test.html
@@ -6,7 +6,7 @@
     <body>
         <script src="../dist/object-observer.js"></script>
 
-        <script src="../build/node_modules/just-test/just-test.js"></script>
+        <script src="../node_modules/just-test/dist/just-test.min.js"></script>
 
         <script src="test-load-init.js"></script>
         <script src="test-apis.js"></script>
