medwork - good point to revert to

--- a/tests/script/test.html
+++ b/tests/script/test.html
@@ -4,7 +4,7 @@
         <title>Testing ObjectObserver (JS) library</title>
     </head>
     <body>
-        <script src="../../dist/object-observer.min.js"></script>
+        <script src="../../dist/object-observer.js"></script>
 
         <script src="../../node_modules/just-test/dist/just-test.min.js"></script>
 
