issue #16, issue #17: removing non-ES6 flavored script distribution; moving to explicitly named exports

--- a/tests/module/test.html
+++ b/tests/module/test.html
@@ -8,6 +8,7 @@
 
         <script type="module" src="test-apis.js"></script>
         <script type="module" src="test-host-objects.js"></script>
+        <script type="module" src="test-listeners.js"></script>
         <script type="module" src="test-load-init.js"></script>
         <script type="module" src="test-object-observer-arrays.js"></script>
         <script type="module" src="test-object-observer-native-objects-to-skip.js"></script>
