--- a/tests/module/test.html
+++ b/tests/module/test.html
@@ -15,6 +15,7 @@
         <script type="module" src="test-object-observer-objects.js"></script>
         <script type="module" src="test-object-observer-performance.js"></script>
         <script type="module" src="test-object-observer-subgraphs.js"></script>
+        <script type="module" src="test-observe-specific-paths.js"></script>
         <script type="module" src="test-revokation.js"></script>
         <script type="module" src="test-unobserve.js"></script>
     </body>
