adding tests for Object.seal top and nested

--- a/tests/module/test.html
+++ b/tests/module/test.html
@@ -10,6 +10,7 @@
     <script type="module" src="test-host-objects.js"></script>
     <script type="module" src="test-listeners.js"></script>
     <script type="module" src="test-load-init.js"></script>
+    <script type="module" src="test-object-generics.js"></script>
     <script type="module" src="test-object-observer-arrays.js"></script>
     <script type="module" src="test-object-observer-native-objects-to-skip.js"></script>
     <script type="module" src="test-object-observer-objects.js"></script>
