some non-funcitonal refactors

--- a/tests/test.html
+++ b/tests/test.html
@@ -13,6 +13,7 @@
     <script type="module" src="test-object-generics.js"></script>
     <script type="module" src="test-object-observer-arrays.js"></script>
     <script type="module" src="test-object-observer-native-objects-to-skip.js"></script>
+    <script type="module" src="test-object-observer-objects-same-refs.js"></script>
     <script type="module" src="test-object-observer-objects.js"></script>
     <script type="module" src="test-object-observer-performance.js"></script>
     <script type="module" src="test-object-observer-subgraphs.js"></script>
