added tests for negative cases of "pathsOf"

--- a/tests/test.html
+++ b/tests/test.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Testing ObjectObserver (JS) library</title>
+    <title>ObjectObserver library tests</title>
 </head>
 
 <body>
