--- a/tests/test.html
+++ b/tests/test.html
@@ -11,6 +11,7 @@
     <script type="module" src="test-listeners.js"></script>
     <script type="module" src="test-load-init.js"></script>
     <script type="module" src="test-object-generics.js"></script>
+    <script type="module" src="test-object-observer-arrays-copy-within.js"></script>
     <script type="module" src="test-object-observer-arrays-typed.js"></script>
     <script type="module" src="test-object-observer-arrays.js"></script>
     <script type="module" src="test-object-observer-native-objects-to-skip.js"></script>
