added tests and unified syntax of change events

--- a/tests/test.html
+++ b/tests/test.html
@@ -6,10 +6,10 @@
 </head>
 
 <body>
-	<script type="module" src="test-apis.js"></script>
+	<script type="module" src="test-apis-base.js"></script>
+	<script type="module" src="test-apis-changes.js"></script>
 	<script type="module" src="test-host-objects.js"></script>
 	<script type="module" src="test-listeners.js"></script>
-	<script type="module" src="test-load-init.js"></script>
 	<script type="module" src="test-object-generics.js"></script>
 	<script type="module" src="test-object-observer-arrays-copy-within.js"></script>
 	<script type="module" src="test-object-observer-arrays-typed.js"></script>
