issue #73: add more use cases, negative tests and error validations

--- a/tests/test.html
+++ b/tests/test.html
@@ -11,6 +11,7 @@
 	<script type="module" src="test-host-objects.js"></script>
 	<script type="module" src="test-listeners.js"></script>
 	<script type="module" src="test-object-generics.js"></script>
+	<script type="module" src="test-object-observer-api.js"></script>
 	<script type="module" src="test-object-observer-arrays-copy-within.js"></script>
 	<script type="module" src="test-object-observer-arrays-typed.js"></script>
 	<script type="module" src="test-object-observer-arrays.js"></script>
