--- a/tests/test.html
+++ b/tests/test.html
@@ -6,27 +6,28 @@
 </head>
 
 <body>
-	<script type="module" src="test-apis-base.js"></script>
-	<script type="module" src="test-apis-changes.js"></script>
-	<script type="module" src="test-host-objects.js"></script>
-	<script type="module" src="test-listeners.js"></script>
-	<script type="module" src="test-object-generics.js"></script>
-	<script type="module" src="test-object-observer-api.js"></script>
-	<script type="module" src="test-object-observer-arrays-copy-within.js"></script>
-	<script type="module" src="test-object-observer-arrays-typed.js"></script>
-	<script type="module" src="test-object-observer-arrays.js"></script>
-	<script type="module" src="test-object-observer-native-objects-to-skip.js"></script>
-	<script type="module" src="test-object-observer-objects.js"></script>
-	<script type="module" src="test-object-observer-objects-async.js"></script>
-	<script type="module" src="test-object-observer-objects-same-refs.js"></script>
-	<script type="module" src="test-object-observer-performance-async.js"></script>
-	<script type="module" src="test-object-observer-performance-sync.js"></script>
-	<script type="module" src="test-object-observer-subgraphs.js"></script>
-	<script type="module" src="test-observable-nested.js"></script>
-	<script type="module" src="test-observe-specific-paths.js"></script>
-	<script type="module" src="test-reassignment-of-equals.js"></script>
-	<script type="module" src="test-revokation.js"></script>
-	<script type="module" src="test-unobserve.js"></script>
+	<script type="module" src="apis-base.js"></script>
+	<script type="module" src="apis-changes.js"></script>
+	<script type="module" src="cross-instance.js"></script>
+	<script type="module" src="host-objects.js"></script>
+	<script type="module" src="listeners.js"></script>
+	<script type="module" src="object-generics.js"></script>
+	<script type="module" src="object-observer-api.js"></script>
+	<script type="module" src="object-observer-arrays-copy-within.js"></script>
+	<script type="module" src="object-observer-arrays-typed.js"></script>
+	<script type="module" src="object-observer-arrays.js"></script>
+	<script type="module" src="object-observer-native-objects-to-skip.js"></script>
+	<script type="module" src="object-observer-objects.js"></script>
+	<script type="module" src="object-observer-objects-async.js"></script>
+	<script type="module" src="object-observer-objects-same-refs.js"></script>
+	<script type="module" src="object-observer-performance-async.js"></script>
+	<script type="module" src="object-observer-performance-sync.js"></script>
+	<script type="module" src="object-observer-subgraphs.js"></script>
+	<script type="module" src="observable-nested.js"></script>
+	<script type="module" src="observe-specific-paths.js"></script>
+	<script type="module" src="reassignment-of-equals.js"></script>
+	<script type="module" src="revokation.js"></script>
+	<script type="module" src="unobserve.js"></script>
 </body>
 
 </html>
