--- a/tests/test.html
+++ b/tests/test.html
@@ -27,6 +27,7 @@
 	<script type="module" src="observe-specific-paths.js"></script>
 	<script type="module" src="reassignment-of-equals.js"></script>
 	<script type="module" src="revokation.js"></script>
+	<script type="module" src="unobserve-new-api.js"></script>
 	<script type="module" src="unobserve.js"></script>
 </body>
 
